Fixes MLH logo z-index bug (#595)
* Fixed MLH logo z-index bug
* Updated parking picture for E-lot

--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -122,6 +122,7 @@ nav
       position: fixed
       right: 15px
       top: 0px
+      z-index: 9
 
     .button
       min-width: 130px
@@ -517,7 +518,6 @@ p
     #mlh-trust-badge
       width: 8%
       margin-right: 10px
-      z-index: 99
     .nav-links a
       padding: 0
       display: none
